--- a/init.yaml
+++ b/init.yaml
@@ -1,11 +1,18 @@
 alias: init
 
 repositories:
+  # product:
+  #   products:
+  #     location: http://docker.for.mac.localhost:8092/products-10.1/repository/
+  #     username: Administrator
+  #     password: manage
+
   product:
     products:
-      location: http://docker.for.mac.localhost:8092/products-10.1/repository/
-      username: Administrator
-      password: manage
+      host: aquarius-dae.eur.ad.sag
+      name: 101oct2017_SIC      
+      username: latest
+      password: latest
   fix:             
     fixes:
       host: aquarius-dae.eur.ad.sag
