--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,5 +1,5 @@
 # MUST start with builder image to provision using template.yaml
-FROM daerepository03.eur.ad.sag:4443/ccdevops/builder as builder
+FROM softwareag/commandcentral:10.1.0.1-builder as builder
 
 # this is default/lazy option for building images
 
