--- a/init.yaml
+++ b/init.yaml
@@ -1,21 +1,42 @@
 alias: init
 
 repositories:
+  
+  # public repositories
+
+  product:
+    products:           
+      location: http://sdc.softwareag.com/dataservewebM100/repository/
+      username: you@company.com
+      password: yourpass
+  fix:     
+    Empower:
+      username: you@company.com
+      password: yourpass
+
+  # local mirror repositories
+
   # product:
   #   products:
   #     location: http://docker.for.mac.localhost:8092/products-10.1/repository/
   #     username: Administrator
   #     password: manage
+  # fix:
+  #   products:
+  #     location: http://docker.for.mac.localhost:8092/fix-fixes-10.1/repository/
+  #     username: Administrator
+  #     password: manage
+  
+  # private SAG repositories
 
-  product:
-    products:
-      host: aquarius-dae.eur.ad.sag
-      name: 101oct2017_SIC      
-      username: latest
-      password: latest
-  fix:             
-    fixes:
-      host: aquarius-dae.eur.ad.sag
-      name: intRepo
-      username: sum
-      password: sum      
+  # product:
+  #   products:
+  #     host: aquarius-dae.eur.ad.sag
+  #     name: 101oct2017_SIC      
+  #     username: latest
+  #     password: latest
+  #   fixes:
+  #     host: aquarius-dae.eur.ad.sag
+  #     name: GA_Fix_Repo
+  #     username: sum
+  #     password: sum 
