--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,10 @@ services:
       - ./licenseKey.xml:/opt/softwareag/IntegrationServer/instances/default/config/licenseKey.xml 
     links:
       - cc
-      
+    environment:
+      - CC_SERVER=cc
+      - CC_AUTO_REGISTER=1
+            
   unmanaged:
     build:
       context: .
