--- a/sag-deployer/docker-compose.yml
+++ b/sag-deployer/docker-compose.yml
@@ -1,31 +1,31 @@
 version: "3.0"
 
 services:
-  unmanaged:
+  deployer:
     build:
       context: .
       dockerfile: Dockerfile.unmanaged
-    image: softwareag/umserver:10.1
+    image: softwareag/deployer:10.1
     ports:
-      - "9000:9000"
-    volumes: 
-      - ./licenseKey.xml:/opt/softwareag/UniversalMessaging/server/license/licence.xml
+      - "5555:5555"
+      - "9999:9999"
 
-  managed:
+  deployer_managed:
     build:
       context: .    
       dockerfile: Dockerfile.managed
-    image: softwareag/umserver_managed:10.1
+    image: softwareag/deployer_managed:10.1
     ports:
-      - "9001:9000"
+      - "5555:5555"
+      - "9999:9999"
+      - "8092:8092"
+      - "8093:8093"
     environment:
       - CC_SERVER=cc
       - CC_AUTO_REGISTER=1
-    volumes: 
-      - ./licenseKey.xml:/opt/softwareag/UniversalMessaging/server/template/licence.xml
     depends_on:
-      - cc   
-    
+      - cc
+
   cc:
     image: store/softwareag/commandcentral:10.1.0.1-server
     ports:
