updating the ports to be the default IS ones...

--- a/sag-deployer/template.yaml
+++ b/sag-deployer/template.yaml
@@ -6,8 +6,9 @@ environments:
     repo.product: products
     repo.fix:     fixes
     deployer.instance.name: default
-    deployer.primary.port: 8094
-    deployer.diagnostic.port: 8095
+    deployer.primary.port: 5555
+    deployer.diagnostic.port: 9999
+    deployer.jmx.port: 8094
     deployer.fixes:
       - wMFix.integrationServer.Core
 
@@ -28,6 +29,7 @@ templates:
         ${deployer.instance.name}:
           primary.port: ${deployer.primary.port}
           diagnostic.port: ${deployer.diagnostic.port}
+          jmx.port: ${deployer.jmx.port}
           package.list: WmDeployer,WmNUMDeployer,WmBrokerDeployer,WmAgileAppsDeployer,WmServiceMock
 
 provision:
