adding copy from builder statements

--- a/sag-deployer/Dockerfile.unmanaged
+++ b/sag-deployer/Dockerfile.unmanaged
@@ -9,13 +9,41 @@ MAINTAINER fabien.sanglier@softwareaggov.com
 ENV SAG_HOME /opt/softwareag
 ENV INSTANCE_NAME=default
 
+WORKDIR $SAG_HOME
+
+COPY --from=builder $SAG_HOME/jvm/jvm/ $SAG_HOME/jvm/jvm/
+
+COPY --from=builder $SAG_HOME/install/jars/ $SAG_HOME/install/jars/
+COPY --from=builder $SAG_HOME/install/profile/ $SAG_HOME/install/profile/
+COPY --from=builder $SAG_HOME/install/products/ $SAG_HOME/install/products/
+
+COPY --from=builder $SAG_HOME/Licenses/sagosch $SAG_HOME/Licenses/sagosch
+
+COPY --from=builder $SAG_HOME/common/bin/ $SAG_HOME/common/bin/
+COPY --from=builder $SAG_HOME/common/conf/ $SAG_HOME/common/conf/
+COPY --from=builder $SAG_HOME/common/db/ $SAG_HOME/common/db/
+COPY --from=builder $SAG_HOME/common/lib/ $SAG_HOME/common/lib/
+COPY --from=builder $SAG_HOME/common/runtime/ $SAG_HOME/common/runtime/
+
+COPY --from=builder $SAG_HOME/WS-Stack/ $SAG_HOME/WS-Stack/
+
+COPY --from=builder $SAG_HOME/IntegrationServer/bin/ $SAG_HOME/IntegrationServer/bin/
+COPY --from=builder $SAG_HOME/IntegrationServer/lib/ $SAG_HOME/IntegrationServer/lib/
+COPY --from=builder $SAG_HOME/IntegrationServer/updates/ $SAG_HOME/IntegrationServer/updates/
+COPY --from=builder $SAG_HOME/IntegrationServer/.tc.dev.log4j.properties $SAG_HOME/IntegrationServer/.tc.dev.log4j.properties
+
+# instances
+COPY --from=builder $SAG_HOME/IntegrationServer/instances/ $SAG_HOME/IntegrationServer/instances/
+
+# profile
+COPY --from=builder $SAG_HOME/profiles/IS_${INSTANCE_NAME}/ $SAG_HOME/profiles/IS_${INSTANCE_NAME}/
+
 # expose any ports from runtimes defined in the template.yaml
 EXPOSE 5555 9999
 
 # copy license file in the right place
-COPY licenseKey.xml $SAG_HOME/IntegrationServer/instances/$INSTANCE_NAME/config/licenseKey.xml
+# COPY licenseKey.xml $SAG_HOME/IntegrationServer/instances/$INSTANCE_NAME/config/licenseKey.xml
 
 ADD *.sh $SAG_HOME/profiles/IS_$INSTANCE_NAME/bin/
 
 ENTRYPOINT $SAG_HOME/profiles/IS_$INSTANCE_NAME/bin/entrypoint.sh
-
