--- a/init-10.1.yaml
+++ b/init-10.1.yaml
@@ -7,13 +7,13 @@ repositories:
   product:
     products:           
       location: http://sdc.softwareag.com/dataservewebM101/repository/
-      username: "sergei.pogrebnyak@softwareag.com"
-      password: "SergeDoc77"
+      username: "$EMPOWER_USERNAME"
+      password: "$EMPOWER_PASSWORD"
   fix:     
     fixes:
       location: http://sdc.softwareag.com/updates/prodRepo
-      username: "sergei.pogrebnyak@softwareag.com"
-      password: "SergeDoc77"
+      username: "$EMPOWER_USERNAME"
+      password: "$EMPOWER_PASSWORD"
 
   ### local mirror repositories
 
