--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
 before_install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
     # EMPOWER_USERNAME and EMPOWER_PASSWORD must be set in the project settings
-  - envsubst < init-$RELEASE.yaml.template > init.yaml
+  - envsubst < init-$RELEASE.yaml > init.yaml
 
 script: 
   - docker-compose build simple
