--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ sudo: required
 services:
   - docker
 
-matrix:
-    - RELEASE=10.1
-#    - RELEASE=10.2
+env:
+  - RELEASE=10.1
 
 before_install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
