--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,14 @@
 sudo: required
-
 services:
   - docker
 
 env:
-  - RELEASE=10.1
+  matrix:
+    - TEST=test
+    - TEST=test-101
 
 before_install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
-    # EMPOWER_USERNAME and EMPOWER_PASSWORD must be set in the project settings
-  - envsubst < init-$RELEASE.yaml > init.yaml && cat init.yaml
 
 script: 
-  - docker-compose build simple
-  - docker-compose build unmanaged 
-  - docker-compose build managed
-  - docker images | grep msc
-  - docker-compose run --rm init
-  - docker-compose up -d managed
-  - docker-compose run --rm test
-  - docker-compose logs
-  - docker-compose down
+  - docker-compose run --rm $TEST
