--- a/template.yaml
+++ b/template.yaml
@@ -1,28 +1,9 @@
-alias: container
+alias: hello-world
 
-templates:
-  msc-server:
-    # fixes: 
-    #   - wMFix.integrationServer.Core
-    products:
-      MSC:
-        default: 
-          primary.port:    5555
-          diagnostic.port: 9999
-          jmx.port:        8094
-          configuration:
-            OSGI-IS_${instance.name}:
-              COMMON-MEMORY:
-                COMMON-MEMORY:
-                  InitSize: 64
-                  MaxSize:  256
-            
-layers:
-  runtime:
-    productRepo: products
-    fixRepo:     fixes
-    templates:   msc-server
-
-provision:
+environments:
   default:
-    runtime: local
+    say.hello: ${}     # REQUIRED: value must be provided at build time
+    hello.name: World  # OPTIONAL: value may be provided at build time
+    actions:
+      hello:
+        script: echo "************** ${say.hello} ${hello.name}! ***************"
