--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: .
       args:
-        - BUILDER_IMAGE=store/softwareag/commandcentral-builder:10.3  # Use the latest available builer image
+        - BUILDER_IMAGE=store/softwareag/commandcentral-builder:10.3  # Use the latest available builder image
         - NODE_IMAGE=store/softwareag/commandcentral-node:10.3 # Use node image for the target release
         - REPO_PRODUCT_URL=https://sdc.softwareag.com/dataservewebM103/repository # product repository must match target release
         - REPO_FIX_URL=https://sdc.softwareag.com/updates/prodRepo # fix repository must have fixes for the target release
@@ -23,7 +23,7 @@ services:
     build:
       context: .
       args:
-        - BUILDER_IMAGE=store/softwareag/commandcentral-builder:10.3 # Use the latest available builer image
+        - BUILDER_IMAGE=store/softwareag/commandcentral-builder:10.3 # Use the latest available builder image
         - NODE_IMAGE=store/softwareag/commandcentral:10.1-node # Use node image for the target release
         - REPO_PRODUCT_URL=https://sdc.softwareag.com/dataservewebM101/repository # product repository must match target release
         - REPO_FIX_URL=https://sdc.softwareag.com/updates/prodRepo # fix repository must have fixes for the target release
